--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -7,4 +7,7 @@ $gray-lighter:           #EAEAEA;
 $gray-lightest:          #F7F7F7;
 $white:                  #FFFFFF;
 
-$red:					 #F74D3C;
+$gold:					         #DFAE56;
+$gold-dark:              #766953;
+$navy:                   #36405A;
+$navy-dark:              #282A30;
