--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -13,19 +13,20 @@
 .columns {
 	&.four {
 		.column {
-			@include media($sm) {
+			text-align: center;
+			margin-bottom: 10px;
+			@include media($xs) {
 				@include span-columns(6);
 				@include omega(2n);
-				background: navy;
-				margin-bottom: 10px;
 			}
 			@include media($med) {
 				@include omega-reset(2n);
-				@include span-columns(4);
-				@include omega(3n);
+				@include span-columns(3);
+				@include omega(4n);
 				background: tomato;
 				margin-bottom: 10px;
 			}
 		}
 	}
 }
+
